--- a/bazel/platforms/BUILD.bazel
+++ b/bazel/platforms/BUILD.bazel
@@ -8,3 +8,12 @@ platform(
         "@bazel_tools//tools/cpp:msvc",
     ],
 )
+
+platform(
+    name = "linux",
+    constraint_values = [
+        "@platforms//cpu:x86_64",
+        "@platforms//os:linux",
+        "@bazel_tools//tools/cpp:clang",
+    ],
+)
