--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -7,7 +7,7 @@ cc_test(
     copts = copts,
     deps = [
         "//bazel_sundry:runfiles",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
     ],
 )
