--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,4 +5,5 @@ module(
 )
 
 bazel_dep(name = "rules_cc", version = "0.0.8")
+bazel_dep(name = "bazel_skylib", version = "1.4.2")
 bazel_dep(name = "googletest", version = "1.14.0")
